tests/fixtures/errors/match_literal_subject_mismatch.chisa
let value = match 1 {
    true -> 7,
    else -> 9
}
